--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -75,7 +75,18 @@ body {
     width: 35.772px;
     height: 38.596px;
     margin-left: 6px;
-    transition: transform 0.5s;
+    transition: transform 0.9s;
+}
+
+.icon-popup {
+    display: none;
+    position: absolute;
+}
+
+.icons-btn:hover+.icon-popup {
+    display: block;
+    right: -15px;
+    bottom: -35px;
 }
 
 @keyframes pulse {
